--- a/src/Mapbender/CoreBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.de.xlf
@@ -218,9 +218,9 @@
         <source>mb.core.layertree.label.featureinfo_onoff</source>
         <target>Information an/aus</target>
       </trans-unit>
-      <trans-unit id="651284d6bbac0abe419148db4b94a3b5" resname="mb.core.layertree.label.transparency">
-        <source>mb.core.layertree.label.transparency</source>
-        <target>Transparenz</target>
+      <trans-unit id="64a09f242bd5e7d1a0f5622a11f5cff2" resname="mb.core.layertree.label.opacity">
+        <source>mb.core.layertree.label.opacity</source>
+        <target>Deckkraft</target>
       </trans-unit>
       <trans-unit id="f64a6c2fa79ba290fd214c07b396e006" resname="mb.core.layertree.label.zoomtolayer">
         <source>mb.core.layertree.label.zoomtolayer</source>
@@ -762,10 +762,6 @@
         <source>mb.core.layertree.label.kmlexport</source>
         <target>KML Export</target>
       </trans-unit>
-      <trans-unit id="13348442cc6a27032d2b4aa28b75a5d3" resname="Search">
-        <source>Search</source>
-        <target>Suchen</target>
-      </trans-unit>
       <trans-unit id="7676545c9153a0ed87dc96296d665c5a" resname="mb.core.metadata.popup.title">
         <source>mb.core.metadata.popup.title</source>
         <target>Metadaten</target>
@@ -785,6 +781,10 @@
       <trans-unit id="aebe23501117e9bbab635579b16ced39" resname="mb.core.entity.app.screenshotfile.error">
         <source>mb.core.entity.app.screenshotfile.error</source>
         <target>Die Datei ist zu groß. Die maximal zulässige Größe beträgt %limit% bytes.</target>
+      </trans-unit>
+      <trans-unit id="035305154a06c6bd1851f8680663ddf8" resname="mb.core.layertree.tooltip.menu.close">
+        <source>mb.core.layertree.tooltip.menu.close</source>
+        <target>Schließen</target>
       </trans-unit>
     </body>
   </file>
