--- a/src/Mapbender/CoreBundle/Resources/translations/messages.it.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.it.xlf
@@ -218,9 +218,9 @@
         <source>mb.core.layertree.label.featureinfo_onoff</source>
         <target>__mb.core.layertree.label.featureinfo_onoff</target>
       </trans-unit>
-      <trans-unit id="651284d6bbac0abe419148db4b94a3b5" resname="mb.core.layertree.label.transparency">
-        <source>mb.core.layertree.label.transparency</source>
-        <target>__mb.core.layertree.label.transparency</target>
+      <trans-unit id="64a09f242bd5e7d1a0f5622a11f5cff2" resname="mb.core.layertree.label.opacity">
+        <source>mb.core.layertree.label.opacity</source>
+        <target>Opacity</target>
       </trans-unit>
       <trans-unit id="f64a6c2fa79ba290fd214c07b396e006" resname="mb.core.layertree.label.zoomtolayer">
         <source>mb.core.layertree.label.zoomtolayer</source>
@@ -753,6 +753,26 @@
       <trans-unit id="a55fa2bdd2dbedda05045a70c8d7c36b" resname="mb.core.layertree.label.metadata">
         <source>mb.core.layertree.label.metadata</source>
         <target>__mb.core.layertree.label.metadata</target>
+      </trans-unit>
+      <trans-unit id="aebe23501117e9bbab635579b16ced39" resname="mb.core.entity.app.screenshotfile.error">
+        <source>mb.core.entity.app.screenshotfile.error</source>
+        <target>__mb.core.entity.app.screenshotfile.error</target>
+      </trans-unit>
+      <trans-unit id="035305154a06c6bd1851f8680663ddf8" resname="mb.core.layertree.tooltip.menu.close">
+        <source>mb.core.layertree.tooltip.menu.close</source>
+        <target>__mb.core.layertree.tooltip.menu.close</target>
+      </trans-unit>
+      <trans-unit id="313130e9ce7f77c283bdbf630a77a026" resname="mb.core.htmlelement.class.title">
+        <source>mb.core.htmlelement.class.title</source>
+        <target>__mb.core.htmlelement.class.title</target>
+      </trans-unit>
+      <trans-unit id="ce2413ae706bd739dcbc0b4f9a289cef" resname="mb.core.htmlelement.class.description">
+        <source>mb.core.htmlelement.class.description</source>
+        <target>__mb.core.htmlelement.class.description</target>
+      </trans-unit>
+      <trans-unit id="d39455710ac8e12021e4959d6e1c6b85" resname="mb.core.htmlelement.tag.html">
+        <source>mb.core.htmlelement.tag.html</source>
+        <target>__mb.core.htmlelement.tag.html</target>
       </trans-unit>
     </body>
   </file>
