--- a/src/Mapbender/WmsBundle/Resources/translations/messages.es.xlf
+++ b/src/Mapbender/WmsBundle/Resources/translations/messages.es.xlf
@@ -670,6 +670,18 @@
         <source>mb.wms.metadata.section.items.bbox</source>
         <target>BoundingBox</target>
       </trans-unit>
+      <trans-unit id="1eec62862c805bb073beebbee0e0891b" resname="mb.wms.wmsloader.repo.instance.label.ratio">
+        <source>mb.wms.wmsloader.repo.instance.label.ratio</source>
+        <target>__mb.wms.wmsloader.repo.instance.label.ratio</target>
+      </trans-unit>
+      <trans-unit id="e80c0741d80e32fb80f40c9a17bc8610" resname="mb.wms.wmsloader.repo.instance.label.buffer">
+        <source>mb.wms.wmsloader.repo.instance.label.buffer</source>
+        <target>__mb.wms.wmsloader.repo.instance.label.buffer</target>
+      </trans-unit>
+      <trans-unit id="08f84450da093c2a4eef8cca79b21030" resname="mb.wms.repo.instance.label.dimensions">
+        <source>mb.wms.repo.instance.label.dimensions</source>
+        <target>__mb.wms.repo.instance.label.dimensions</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
