--- a/src/Mapbender/CoreBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.de.xlf
@@ -774,6 +774,14 @@
         <source>mb.core.entity.app.screenshotfile.error</source>
         <target>Die Datei ist zu groß. Die maximal zulässige Größe beträgt %limit% bytes.</target>
       </trans-unit>
+      <trans-unit id="035305154a06c6bd1851f8680663ddf8" resname="mb.core.layertree.tooltip.menu.close">
+        <source>mb.core.layertree.tooltip.menu.close</source>
+        <target>Schließen</target>
+      </trans-unit>
+      <trans-unit id="788796392812fe40c46f1cad215833f2" resname="mb.core.printclient.popup.btn.queues">
+        <source>mb.core.printclient.popup.btn.queues</source>
+        <target>Druckaufträge</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
