--- a/src/Mapbender/CoreBundle/Resources/translations/messages.nl.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.nl.xlf
@@ -934,6 +934,18 @@
         <source>mb.core.htmlelement.tag.html</source>
         <target>__mb.core.htmlelement.tag.html</target>
       </trans-unit>
+      <trans-unit id="aa93e59d2e2f14448358909c80467abe" resname="mb.core.layertree.label.dimension_onoff">
+        <source>mb.core.layertree.label.dimension_onoff</source>
+        <target>On/Off Dimension</target>
+      </trans-unit>
+      <trans-unit id="ac75383716ace39d7ca992ce8422ce5d" resname="mb.core.layertree.label.dimension.current_value">
+        <source>mb.core.layertree.label.dimension.current_value</source>
+        <target>Current value</target>
+      </trans-unit>
+      <trans-unit id="44b1db86684ccd813cfea5e5d92461cb" resname="mb.core.layertree.label.dimension">
+        <source>mb.core.layertree.label.dimension</source>
+        <target>Dimension</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
