--- a/src/Mapbender/ManagerBundle/Resources/translations/messages.es.xlf
+++ b/src/Mapbender/ManagerBundle/Resources/translations/messages.es.xlf
@@ -20,7 +20,7 @@
       </trans-unit>
       <trans-unit id="66daa81c3ff5b18311b1228c51816803" resname="mb.manager.element.yaml.message">
         <source>mb.manager.element.yaml.message</source>
-        <target>Use the &lt;a class="linkButton" href="http://www.wikipedia.org/search-redirect.php?search=yaml&amp;language=%locale%"&gt;YAML&lt;/a&gt; format to describe the element's configuration.</target>
+        <target><![CDATA[Use the <a class="linkButton" href="http://www.wikipedia.org/search-redirect.php?search=yaml&language=%locale%">YAML</a> format to describe the element's configuration.]]></target>
       </trans-unit>
       <trans-unit id="7249e0628d1a1e31cb2d44305a1c91ab" resname="mb.core.admin.corrdsdisplay.label">
         <source>mb.core.admin.corrdsdisplay.label</source>
@@ -300,11 +300,11 @@
       </trans-unit>
       <trans-unit id="1e8cb174046a6e4cf13d68d18c70d8f9" resname="mb.manager.admin.layerset.delete.confirm">
         <source>mb.manager.admin.layerset.delete.confirm</source>
-        <target>¿Realmente quieres remover el conjunto de capas con el título &lt;span class="italic"&gt;%layerset_title%&lt;/span&gt;?</target>
+        <target><![CDATA[¿Realmente quieres remover el conjunto de capas con el título <span class="italic">%layerset_title%</span>?]]></target>
       </trans-unit>
       <trans-unit id="154a2657aaa83a07817e8912d27526d1" resname="mb.manager.admin.instance.delete.confirm">
         <source>mb.manager.admin.instance.delete.confirm</source>
-        <target>¿Realmente quieres quitar la instancia de título &lt;span class="italic"&gt;%instance_title%&lt;/span&gt;?</target>
+        <target><![CDATA[¿Realmente quieres quitar la instancia de título <span class="italic">%instance_title%</span>?]]></target>
       </trans-unit>
       <trans-unit id="250f49cd91268cd451c0416f0289ca5c" resname="mb.manager.admin.sources">
         <source>mb.manager.admin.sources</source>
@@ -533,6 +533,10 @@
       <trans-unit id="9c0cce2c5e9cf4ee90fbc62f697167ac" resname="mb.manager.import.source.failed">
         <source>mb.manager.import.source.failed</source>
         <target>Sources cannot be imported.</target>
+      </trans-unit>
+      <trans-unit id="16f74a89b0e7be78f76edfe1108dc053" resname="mb.core.entity.app.screenshotfile.resolution.error">
+        <source>mb.core.entity.app.screenshotfile.resolution.error</source>
+        <target>Es posible solamente subir archivos/fotos de %screenshotHeight% x %screenshotWidth% pixeles o de un tamano mayor. Su archivo es de %uploadWidth% x %uploadHeighth% pixeles.</target>
       </trans-unit>
     </body>
   </file>
