source update (wms): url, metadata added

--- a/src/Mapbender/ManagerBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/ManagerBundle/Resources/translations/messages.de.xlf
@@ -76,7 +76,7 @@
       </trans-unit>
       <trans-unit id="66daa81c3ff5b18311b1228c51816803" resname="mb.manager.element.yaml.message">
         <source>mb.manager.element.yaml.message</source>
-        <target><![CDATA[Benutzen Sie das <a class="linkButton" href="http://www.wikipedia.org/search-redirect.php?search=yaml&language=%locale%">YAML</a> Format, um die Elementkonfiguration zu beschreiben.]]></target>
+        <target>Benutzen Sie das &lt;a class="linkButton" href="http://www.wikipedia.org/search-redirect.php?search=yaml&amp;language=%locale%"&gt;YAML&lt;/a&gt; Format, um die Elementkonfiguration zu beschreiben.</target>
       </trans-unit>
       <trans-unit id="0ab9a494321db8a216193321471a0dca" resname="mb.manager.managerbundle.add_user_group">
         <source>mb.manager.managerbundle.add_user_group</source>
@@ -196,11 +196,11 @@
       </trans-unit>
       <trans-unit id="1e8cb174046a6e4cf13d68d18c70d8f9" resname="mb.manager.admin.layerset.delete.confirm">
         <source>mb.manager.admin.layerset.delete.confirm</source>
-        <target><![CDATA[Wollen Sie wirklich das Layerset <span class="italic">%layerset_title%</span> löschen?]]></target>
+        <target>Wollen Sie wirklich das Layerset &lt;span class="italic"&gt;%layerset_title%&lt;/span&gt; löschen?</target>
       </trans-unit>
       <trans-unit id="154a2657aaa83a07817e8912d27526d1" resname="mb.manager.admin.instance.delete.confirm">
         <source>mb.manager.admin.instance.delete.confirm</source>
-        <target><![CDATA[Wollen Sie wirklich die Instanz <span class="italic">%instance_title%</span> entfernen?]]></target>
+        <target>Wollen Sie wirklich die Instanz &lt;span class="italic"&gt;%instance_title%&lt;/span&gt; entfernen?</target>
       </trans-unit>
       <trans-unit id="65b1b8ec796958dee755f045045ec4c5" resname="mb.manager.admin.template">
         <source>mb.manager.admin.template</source>
@@ -553,6 +553,10 @@
       <trans-unit id="3b026dc345fecbb0cdeb1e1e66273bb5" resname="mb.manager.admin.layerset.id_description">
         <source>mb.manager.admin.layerset.id_description</source>
         <target>Id in Form: SourceId/InstanceId</target>
+      </trans-unit>
+      <trans-unit id="c4c6bf3442aaab7c9eb080249b6a3109" resname="mb.manager.admin.source.update">
+        <source>mb.manager.admin.source.update</source>
+        <target>Datenquelle aktualisieren</target>
       </trans-unit>
     </body>
   </file>
