--- a/src/Mapbender/ManagerBundle/Resources/translations/messages.en.xlf
+++ b/src/Mapbender/ManagerBundle/Resources/translations/messages.en.xlf
@@ -76,7 +76,7 @@
       </trans-unit>
       <trans-unit id="66daa81c3ff5b18311b1228c51816803" resname="mb.manager.element.yaml.message">
         <source>mb.manager.element.yaml.message</source>
-        <target><![CDATA[Use the <a class="linkButton" href="http://www.wikipedia.org/search-redirect.php?search=yaml&language=%locale%">YAML</a> format to describe the element's configuration.]]></target>
+        <target>Use the &lt;a class="linkButton" href="http://www.wikipedia.org/search-redirect.php?search=yaml&amp;language=%locale%"&gt;YAML&lt;/a&gt; format to describe the element's configuration.</target>
       </trans-unit>
       <trans-unit id="0ab9a494321db8a216193321471a0dca" resname="mb.manager.managerbundle.add_user_group">
         <source>mb.manager.managerbundle.add_user_group</source>
@@ -196,11 +196,11 @@
       </trans-unit>
       <trans-unit id="1e8cb174046a6e4cf13d68d18c70d8f9" resname="mb.manager.admin.layerset.delete.confirm">
         <source>mb.manager.admin.layerset.delete.confirm</source>
-        <target><![CDATA[Do you really want to remove the layerset with the title <span class="italic">%layerset_title%</span>?]]></target>
+        <target>Do you really want to remove the layerset with the title &lt;span class="italic"&gt;%layerset_title%&lt;/span&gt;?</target>
       </trans-unit>
       <trans-unit id="154a2657aaa83a07817e8912d27526d1" resname="mb.manager.admin.instance.delete.confirm">
         <source>mb.manager.admin.instance.delete.confirm</source>
-        <target><![CDATA[Do you really want to remove the instance with the title <span class="italic">%instance_title%</span>?]]></target>
+        <target>Do you really want to remove the instance with the title &lt;span class="italic"&gt;%instance_title%&lt;/span&gt;?</target>
       </trans-unit>
       <trans-unit id="65b1b8ec796958dee755f045045ec4c5" resname="mb.manager.admin.template">
         <source>mb.manager.admin.template</source>
@@ -546,6 +546,10 @@
       <trans-unit id="03c37885863a75b058bceeae4e0d1c4c" resname="mb.manager.admin.layerset.id">
         <source>mb.manager.admin.layerset.id</source>
         <target>Id</target>
+      </trans-unit>
+      <trans-unit id="c4c6bf3442aaab7c9eb080249b6a3109" resname="mb.manager.admin.source.update">
+        <source>mb.manager.admin.source.update</source>
+        <target>Update source</target>
       </trans-unit>
     </body>
   </file>
