--- a/src/Mapbender/ManagerBundle/Resources/translations/messages.it.xlf
+++ b/src/Mapbender/ManagerBundle/Resources/translations/messages.it.xlf
@@ -20,7 +20,7 @@
       </trans-unit>
       <trans-unit id="66daa81c3ff5b18311b1228c51816803" resname="mb.manager.element.yaml.message">
         <source>mb.manager.element.yaml.message</source>
-        <target><![CDATA[Usa il formato <a class="linkButton" href="http://www.wikipedia.org/search-redirect.php?search=yaml&language=%locale%">YAML</a> per descrivere la configurazione dell'elemento.]]></target>
+        <target>Usa il formato &lt;a class="linkButton" href="http://www.wikipedia.org/search-redirect.php?search=yaml&amp;language=%locale%"&gt;YAML&lt;/a&gt; per descrivere la configurazione dell'elemento.</target>
       </trans-unit>
       <trans-unit id="7249e0628d1a1e31cb2d44305a1c91ab" resname="mb.core.admin.corrdsdisplay.label">
         <source>mb.core.admin.corrdsdisplay.label</source>
@@ -300,11 +300,11 @@
       </trans-unit>
       <trans-unit id="1e8cb174046a6e4cf13d68d18c70d8f9" resname="mb.manager.admin.layerset.delete.confirm">
         <source>mb.manager.admin.layerset.delete.confirm</source>
-        <target><![CDATA[Sei sicuro di voler rimuovere il layerset con il titolo <span class="italic">%layerset_title%</span>?]]></target>
+        <target>Sei sicuro di voler rimuovere il layerset con il titolo &lt;span class="italic"&gt;%layerset_title%&lt;/span&gt;?</target>
       </trans-unit>
       <trans-unit id="154a2657aaa83a07817e8912d27526d1" resname="mb.manager.admin.instance.delete.confirm">
         <source>mb.manager.admin.instance.delete.confirm</source>
-        <target><![CDATA[Sei sicuro di voler rimuovere l'istanza con il titolo <span class="italic">%instance_title%</span>?]]></target>
+        <target>Sei sicuro di voler rimuovere l'istanza con il titolo &lt;span class="italic"&gt;%instance_title%&lt;/span&gt;?</target>
       </trans-unit>
       <trans-unit id="250f49cd91268cd451c0416f0289ca5c" resname="mb.manager.admin.sources">
         <source>mb.manager.admin.sources</source>
@@ -537,6 +537,14 @@
       <trans-unit id="16f74a89b0e7be78f76edfe1108dc053" resname="mb.core.entity.app.screenshotfile.resolution.error">
         <source>mb.core.entity.app.screenshotfile.resolution.error</source>
         <target>Si possono solamente caricare dei file con la dimensione di %screenshotHeight% x %screenshotWidth% pixel  o  piu grande. Il file da lei caricato ha la dimensione di %uploadWidth% x %uploadHeighth% Pixel.</target>
+      </trans-unit>
+      <trans-unit id="3b026dc345fecbb0cdeb1e1e66273bb5" resname="mb.manager.admin.layerset.id_description">
+        <source>mb.manager.admin.layerset.id_description</source>
+        <target>__mb.manager.admin.layerset.id_description</target>
+      </trans-unit>
+      <trans-unit id="c4c6bf3442aaab7c9eb080249b6a3109" resname="mb.manager.admin.source.update">
+        <source>mb.manager.admin.source.update</source>
+        <target>Update source</target>
       </trans-unit>
     </body>
   </file>
