--- a/src/Mapbender/WmcBundle/Resources/translations/messages.es.xlf
+++ b/src/Mapbender/WmcBundle/Resources/translations/messages.es.xlf
@@ -156,7 +156,7 @@
       </trans-unit>
       <trans-unit id="b516d036d029316adb16f384d744ee3e" resname="mb.wmc.wmc.delete_confirm">
         <source>mb.wmc.wmc.delete_confirm</source>
-        <target>¿Realmente quieres remover el WMC con el titulo &lt;em&gt;%wmc_title%&lt;/em&gt; y el id &lt;em&gt;%wmc_id%&lt;/em&gt;?</target>
+        <target><![CDATA[¿Realmente quieres remover el WMC con el titulo <em>%wmc_title%</em> y el id <em>%wmc_id%</em>?]]></target>
       </trans-unit>
       <trans-unit id="cd08999d47cf93c1e3e552de4fdb5aec" resname="mb.wmc.wmceditor.list.id">
         <source>mb.wmc.wmceditor.list.id</source>
@@ -285,6 +285,10 @@
       <trans-unit id="c77b9c6d41d8bd287d8ef83b42af7c73" resname="mb.wmc.element.wmchandler.error_srs">
         <source>mb.wmc.element.wmchandler.error_srs</source>
         <target>SRS "%state.extent.srs%" no es soportado por esta aplicación.</target>
+      </trans-unit>
+      <trans-unit id="7550c8b5c4bee4a01882941e2553c8ea" resname="mb.wmc.error.wmcurlloader_notallowed">
+        <source>mb.wmc.error.wmcurlloader_notallowed</source>
+        <target>el cargador WMC URL no es permitido.</target>
       </trans-unit>
     </body>
   </file>
