--- a/src/Mapbender/ManagerBundle/Resources/translations/messages.es.xlf
+++ b/src/Mapbender/ManagerBundle/Resources/translations/messages.es.xlf
@@ -538,6 +538,10 @@
         <source>mb.core.entity.app.screenshotfile.resolution.error</source>
         <target>Es posible solamente subir archivos/fotos de %screenshotHeight% x %screenshotWidth% pixeles o de un tamano mayor. Su archivo es de %uploadWidth% x %uploadHeighth% pixeles.</target>
       </trans-unit>
+      <trans-unit id="3b026dc345fecbb0cdeb1e1e66273bb5" resname="mb.manager.admin.layerset.id_description">
+        <source>mb.manager.admin.layerset.id_description</source>
+        <target>__mb.manager.admin.layerset.id_description</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
