--- a/src/Mapbender/ManagerBundle/Resources/translations/messages.it.xlf
+++ b/src/Mapbender/ManagerBundle/Resources/translations/messages.it.xlf
@@ -538,6 +538,10 @@
         <source>mb.core.entity.app.screenshotfile.resolution.error</source>
         <target>Si possono solamente caricare dei file con la dimensione di %screenshotHeight% x %screenshotWidth% pixel  o  piu grande. Il file da lei caricato ha la dimensione di %uploadWidth% x %uploadHeighth% Pixel.</target>
       </trans-unit>
+      <trans-unit id="3b026dc345fecbb0cdeb1e1e66273bb5" resname="mb.manager.admin.layerset.id_description">
+        <source>mb.manager.admin.layerset.id_description</source>
+        <target>__mb.manager.admin.layerset.id_description</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
