--- a/src/Mapbender/WmsBundle/Resources/translations/messages.it.xlf
+++ b/src/Mapbender/WmsBundle/Resources/translations/messages.it.xlf
@@ -702,6 +702,10 @@
         <source>mb.wms.dimhandler.tag.handler</source>
         <target>handler</target>
       </trans-unit>
+      <trans-unit id="f56702f4f808c0e89daddb78b7f51993" resname="mb.wms.dimensionsets.no_dimension">
+        <source>mb.wms.dimensionsets.no_dimension</source>
+        <target>no dimension</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
