add translations, add create node

--- a/src/Mapbender/CoreBundle/Resources/translations/messages.fr.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.fr.xlf
@@ -946,6 +946,10 @@
         <source>mb.core.htmlelement.tag.html</source>
         <target>__mb.core.htmlelement.tag.html</target>
       </trans-unit>
+      <trans-unit id="3973ffff84e82a5b904cca85555b9c21" resname="mb.core.admin.layertree.label.usetheme">
+        <source>mb.core.admin.layertree.label.usetheme</source>
+        <target>Use Theme</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
